[gd_scene load_steps=47 format=3 uid="uid://dqvqtl88664n2"]

[ext_resource type="Script" uid="uid://vkby8odkq55s" path="res://Planet Assets/planet_detail.gd" id="1_6xqqp"]
[ext_resource type="Texture2D" uid="uid://dcepmqmnhr7fc" path="res://Deny.png" id="2_2x5va"]
[ext_resource type="Texture2D" uid="uid://bvlw46r5nuvd7" path="res://Validate.png" id="2_p4vhu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_638ay"]
atlas = ExtResource("2_2x5va")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n533"]
atlas = ExtResource("2_2x5va")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqsgl"]
atlas = ExtResource("2_2x5va")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb168"]
atlas = ExtResource("2_2x5va")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mos3t"]
atlas = ExtResource("2_2x5va")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ujc"]
atlas = ExtResource("2_2x5va")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eny4"]
atlas = ExtResource("2_2x5va")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk56i"]
atlas = ExtResource("2_2x5va")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl28t"]
atlas = ExtResource("2_2x5va")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgd30"]
atlas = ExtResource("2_2x5va")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsv6o"]
atlas = ExtResource("2_2x5va")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kslv"]
atlas = ExtResource("2_2x5va")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0rpb"]
atlas = ExtResource("2_2x5va")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x47p4"]
atlas = ExtResource("2_2x5va")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_td72b"]
atlas = ExtResource("2_2x5va")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smplm"]
atlas = ExtResource("2_2x5va")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5rvj"]
atlas = ExtResource("2_2x5va")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d62h0"]
atlas = ExtResource("2_2x5va")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pslnl"]
atlas = ExtResource("2_2x5va")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o5n8"]
atlas = ExtResource("2_2x5va")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08o3a"]
atlas = ExtResource("2_2x5va")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djfdi"]
atlas = ExtResource("2_2x5va")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxl1c"]
atlas = ExtResource("2_p4vhu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg8o0"]
atlas = ExtResource("2_p4vhu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiloj"]
atlas = ExtResource("2_p4vhu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbg41"]
atlas = ExtResource("2_p4vhu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_babf8"]
atlas = ExtResource("2_p4vhu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qadsr"]
atlas = ExtResource("2_p4vhu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wotjm"]
atlas = ExtResource("2_p4vhu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iniqa"]
atlas = ExtResource("2_p4vhu")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nma07"]
atlas = ExtResource("2_p4vhu")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7vyt"]
atlas = ExtResource("2_p4vhu")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8sf8"]
atlas = ExtResource("2_p4vhu")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvpd0"]
atlas = ExtResource("2_p4vhu")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u8at"]
atlas = ExtResource("2_p4vhu")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf2jf"]
atlas = ExtResource("2_p4vhu")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynqnk"]
atlas = ExtResource("2_p4vhu")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3og2s"]
atlas = ExtResource("2_p4vhu")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpudj"]
atlas = ExtResource("2_p4vhu")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxnn8"]
atlas = ExtResource("2_p4vhu")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee3s8"]
atlas = ExtResource("2_p4vhu")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_caeub"]
atlas = ExtResource("2_p4vhu")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2x5va"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_638ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n533")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqsgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb168")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mos3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eny4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk56i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl28t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgd30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsv6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kslv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0rpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x47p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td72b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smplm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5rvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d62h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pslnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08o3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djfdi")
}],
"loop": false,
"name": &"Deny",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxl1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg8o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiloj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbg41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_babf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qadsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wotjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iniqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nma07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7vyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8sf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvpd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u8at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf2jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynqnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3og2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpudj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxnn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee3s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caeub")
}],
"loop": false,
"name": &"Validate",
"speed": 16.0
}]

[node name="Planet_Detail" type="Control" groups=["Planets"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
script = ExtResource("1_6xqqp")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 402.0
offset_bottom = 392.0
tab_alignment = 1
current_tab = 0

[node name="Actions" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
alignment = 1
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Actions"]
layout_mode = 2

[node name="Negotiate" type="Button" parent="TabContainer/Actions/MarginContainer"]
layout_mode = 2
text = "NEGOTIATE"

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Actions"]
layout_mode = 2

[node name="Attack" type="Button" parent="TabContainer/Actions/MarginContainer2"]
layout_mode = 2
text = "ATTACK"

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/Actions"]
layout_mode = 2

[node name="Scout" type="Button" parent="TabContainer/Actions/MarginContainer3"]
layout_mode = 2
text = "SCOUT"

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/Actions"]
layout_mode = 2

[node name="Move to" type="Button" parent="TabContainer/Actions/MarginContainer4"]
layout_mode = 2
text = "MOVE TO"

[node name="Status" type="HBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
alignment = 1
metadata/_tab_index = 1

[node name="Label" type="VBoxContainer" parent="TabContainer/Status"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Status/Label"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Name" type="RichTextLabel" parent="TabContainer/Status/Label/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Planet name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Status/Label"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Race" type="RichTextLabel" parent="TabContainer/Status/Label/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Inhabitanting race"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/Status/Label"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Culture" type="RichTextLabel" parent="TabContainer/Status/Label/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Dominant culture"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/Status/Label"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Wealth" type="RichTextLabel" parent="TabContainer/Status/Label/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Wealth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Values" type="VBoxContainer" parent="TabContainer/Status"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Status/Values"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Name" type="RichTextLabel" parent="TabContainer/Status/Values/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Status/Values"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Race" type="RichTextLabel" parent="TabContainer/Status/Values/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/Status/Values"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Culture" type="RichTextLabel" parent="TabContainer/Status/Values/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/Status/Values"]
layout_mode = 2
size_flags_vertical = 3

[node name="Planet_Wealth" type="RichTextLabel" parent="TabContainer/Status/Values/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FreeTab" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Validate" type="AnimatedSprite2D" parent="." groups=["validate"]]
position = Vector2(200.6, 335)
scale = Vector2(1.79688, 1.79688)
sprite_frames = SubResource("SpriteFrames_2x5va")
animation = &"Deny"

[connection signal="button_down" from="TabContainer/Actions/MarginContainer/Negotiate" to="." method="_on_negotiate_button_down"]
[connection signal="button_down" from="TabContainer/Actions/MarginContainer2/Attack" to="." method="_on_attack_button_down"]
[connection signal="button_down" from="TabContainer/Actions/MarginContainer3/Scout" to="." method="_on_scout_button_down"]
[connection signal="button_down" from="TabContainer/Actions/MarginContainer4/Move to" to="." method="_on_move_to_button_down"]
